--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Bonjour.ent",
-  "name": "Bonjour Entertaiment",
+  "name": "Bonjour Entertainment",
   "icons": [
     {
       "src": "Logo.png",
