--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "private": true,
   "dependencies": {
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.13.4",
     "@mui/styles": "^5.13.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.5.0",
+    "babel-plugin-macros": "^3.1.0",
+    "bootstrap": "^5.3.1",
     "flickity": "^2.3.0",
     "node": "^17.0.1",
     "react": "latest",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^17.0.2",
     "react-flickity-component": "^3.0.0",
-    "react-icons": "^4.9.0",
     "react-router-dom": "6.11.2",
     "react-scripts": "^5.0.1",
     "react-social-icons": "^5.15.0",
