--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@loadable/component": "^5.15.3",
     "@mui/material": "^5.13.4",
     "@mui/styles": "^5.13.2",
     "@testing-library/jest-dom": "^5.16.5",
